# EasyHg

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: release.yml  update-homebrew-tap-formula.yml
docs/screenshots/: custom-commands.txt  overview.txt  selective-commit.txt
packaging/homebrew/: README.md
scripts/: generate-homebrew-formula.sh  update-homebrew-tap-formula.sh
src/: actions.rs  app.rs  config.rs  custom_commands.rs  domain.rs  main.rs  ui.rs
src/hg/: mod.rs
tests/: cli_integration.rs
