[package]
name = "easyhg"
version = "0.2.2"
edition = "2024"
description = "Lazygit-style terminal UI for Mercurial"
license = "MIT"

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/easyhg", dest = "/usr/bin/easyhg", mode = "755" },
  { source = "README.md", dest = "/usr/share/doc/easyhg/README.md", mode = "644", doc = true },
]

[package.metadata.generate-rpm.requires]
mercurial = "*"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
crossterm = { version = "0.28", features = ["event-stream"] }
dirs = "6.0"
futures-util = "0.3"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["macros", "process", "rt-multi-thread", "sync", "time"] }
toml = "0.8"
